--- a/reader.html
+++ b/reader.html
@@ -7,7 +7,7 @@
 	
 	<title>Canvas Test</title>
 
-	<link rel="stylesheet" href="http://github.com/joshuaclayton/blueprint-css/raw/master/blueprint/src/reset.css">
+	<link rel="stylesheet" href="http://github.com/joshuaclayton/blueprint-css/raw/master/blueprint/src/reset.css" media="screen, projection">
 	<link rel="stylesheet" href="styles.css" media="screen, projection">
 	<script src="scripts.js"></script>
 </head>
