--- a/reader.html
+++ b/reader.html
@@ -7,11 +7,9 @@
 	
 	<title>Canvas Test</title>
 
-	<link rel="stylesheet" href="http://github.com/joshuaclayton/blueprint-css/raw/master/blueprint/src/reset.css" media="screen, projection">
-	<link rel="stylesheet" href="styles.css" media="screen, projection">
 	<script src="scripts.js"></script>
 </head>
-<body>
+<body id="body"">
 	<canvas id="comic">get a better browser, fool.</canvas>
 </body>
 </html>
