--- a/reader.html
+++ b/reader.html
@@ -7,6 +7,7 @@
 	
 	<title>Canvas Test</title>
 
+	<link rel="stylesheet" href="reset.css" media="screen, projection" />
 	<script src="scripts.js"></script>
 </head>
 <body id="body"">
