--- a/reader.html
+++ b/reader.html
@@ -8,9 +8,10 @@
 	<title>Canvas Test</title>
 
 	<link rel="stylesheet" href="reset.css" media="screen, projection" />
-	<script src="scripts.js"></script>
+	<link rel="stylesheet" href="styles.css" media="screen, projection" />
+	<script src="ComicBook.js"></script>
 </head>
 <body id="body"">
-	<canvas id="comic">get a better browser, fool.</canvas>
+	<canvas id="comic">The reader only works with modern browsers currently. Legacy browser support is coming soon.</canvas>
 </body>
 </html>
