--- a/reader.html
+++ b/reader.html
@@ -9,6 +9,8 @@
 
 	<link rel="stylesheet" href="reset.css" media="screen, projection" />
 	<link rel="stylesheet" href="styles.css" media="screen, projection" />
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script src="ComicBook.js"></script>
 </head>
 <body id="body"">
