point to the moved js

--- a/reader.html
+++ b/reader.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="styles.css" media="screen, projection" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script src="ComicBook.js"></script>
+	<script src="lib/ComicBook.js"></script>
 </head>
 <body id="body"">
 	<canvas id="comic">The reader only works with modern browsers currently. Legacy browser support is coming soon.</canvas>
