basic enhancements api implemented

--- a/reader.html
+++ b/reader.html
@@ -11,7 +11,10 @@
 	<link rel="stylesheet" href="styles.css" media="screen, projection" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script src="lib/Effects/desaturate.js"></script>
+	<script src="lib/pixastic/pixastic.core.js"></script>
+	<script src="lib/pixastic/actions/brightness.js"></script>
+	<script src="lib/pixastic/actions/desaturate.js"></script>
+	<script src="lib/pixastic/actions/sharpen.js"></script>
 	<script src="lib/ComicBook.js"></script>
 </head>
 <body id="body"">
