adding basic minified version

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -10,7 +10,7 @@
 		<script src="../lib/pixastic/actions/brightness.js"></script>
 		<script src="../lib/pixastic/actions/desaturate.js"></script>
 		<script src="../lib/pixastic/actions/sharpen.js"></script>
-		<script src="../lib/ComicBook.js"></script>
+		<script src="../lib/ComicBook.min.js"></script>
 
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/smoothness/jquery-ui.css">
