updated basic example to actually redraw on window resize

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -41,7 +41,9 @@
 			);
 			book.draw();
 
-			window.onresize = book.drawPage;
+			$(window).resize(function(event) {
+				book.draw();
+			});
 		</script>
 	</body>
 </html>
