--- a/examples/basic.html
+++ b/examples/basic.html
@@ -22,18 +22,32 @@
 
 		<script>
 			var book = new ComicBook('comic', [
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/CSPDFrontCover.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd001.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd003.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd004.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd005.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd006.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd007.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd008.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd009.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd010.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd011.jpg',
-				'http://www.law.duke.edu/cspd/comics/2006/pages/large/cspd012.jpg'
+				'goldenboy/goldenboy_00.jpg',
+				'goldenboy/goldenboy_01.jpg',
+				'goldenboy/goldenboy_02.jpg',
+				'goldenboy/goldenboy_03.jpg',
+				'goldenboy/goldenboy_04.jpg',
+				'goldenboy/goldenboy_05.jpg',
+				'goldenboy/goldenboy_06.jpg',
+				'goldenboy/goldenboy_07.jpg',
+				'goldenboy/goldenboy_08.jpg',
+				'goldenboy/goldenboy_09.jpg',
+				'goldenboy/goldenboy_10.jpg',
+				'goldenboy/goldenboy_11.jpg',
+				'goldenboy/goldenboy_12.jpg',
+				'goldenboy/goldenboy_13.jpg',
+				'goldenboy/goldenboy_14.jpg',
+				'goldenboy/goldenboy_15.jpg',
+				'goldenboy/goldenboy_16.jpg',
+				'goldenboy/goldenboy_17.jpg',
+				'goldenboy/goldenboy_18.jpg',
+				'goldenboy/goldenboy_19.jpg',
+				'goldenboy/goldenboy_20.jpg',
+				'goldenboy/goldenboy_21.jpg',
+				'goldenboy/goldenboy_22.jpg',
+				'goldenboy/goldenboy_23.jpg',
+				'goldenboy/goldenboy_24.jpg',
+				'goldenboy/goldenboy_25.jpg'
    			]);
 			book.draw();
 
