now using the Aristo jQuery UI theme

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -9,7 +9,7 @@
 		<script src="../lib/ComicBook.min.js"></script>
 
 		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" href="../css/Aristo/css/Aristo/Aristo.css">
 		<link rel="stylesheet" href="../css/styles.css">
 	</head>
 	<body>
