--- a/examples/basic.html
+++ b/examples/basic.html
@@ -7,6 +7,10 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 		<script src="../lib/ComicBook.js"></script>
+		<script src="../lib/pixastic/pixastic.core.js"></script>
+		<script src="../lib/pixastic/actions/brightness.js"></script>
+		<script src="../lib/pixastic/actions/desaturate.js"></script>
+		<script src="../lib/pixastic/actions/brightness.js"></script>
 
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/smoothness/jquery-ui.css">
