updated jquery to 1.9.1

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -4,10 +4,9 @@
 		<meta charset="utf8">
 		<title>Basic</title>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
 		<script src="../lib/ComicBook.min.js"></script>
-
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="../css/Aristo/css/Aristo/Aristo.css">
 		<link rel="stylesheet" href="../css/styles.css">
