--- a/examples/dev.html
+++ b/examples/dev.html
@@ -4,16 +4,18 @@
 		<meta charset="utf8">
 		<title>Dev</title>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="../lib/pixastic/pixastic.core.js"></script>
 		<script src="../lib/pixastic/actions/brightness.js"></script>
 		<script src="../lib/pixastic/actions/desaturate.js"></script>
 		<script src="../lib/pixastic/actions/sharpen.js"></script>
+		<script src="../lib/vendor/handlebars.runtime-1.0.rc.1.min.js"></script>
+		<script src="../lib/templates.js"></script>
 		<script src="../lib/ComicBook.js"></script>
 		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="../css/Aristo/css/Aristo/Aristo.css">
+		<link rel="stylesheet" href="../fonts/icomoon-toolbar/style.css">
 		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="../css/toolbar.css">
 	</head>
 	<body>
 
@@ -48,11 +50,11 @@
 				'goldenboy/goldenboy_23.jpg',
 				'goldenboy/goldenboy_24.jpg',
 				'goldenboy/goldenboy_25.jpg'
-   			]);
+   		]);
 
 			book.draw();
 
-			$(window).resize(function(event) {
+			$(window).on('resize', function () {
 				book.draw();
 			});
 		</script>
