--- a/examples/dev.html
+++ b/examples/dev.html
@@ -4,11 +4,10 @@
 		<meta charset="utf8">
 		<title>Dev</title>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="../lib/pixastic/pixastic.core.js"></script>
-		<script src="../lib/pixastic/actions/brightness.js"></script>
-		<script src="../lib/pixastic/actions/desaturate.js"></script>
-		<script src="../lib/pixastic/actions/sharpen.js"></script>
+		<script src="../lib/vendor/jquery-2.0.0.min.js"></script>
+		<script src="../lib/vendor/pixastic/pixastic.js"></script>
+		<script src="../lib/vendor/pixastic/pixastic.effects.js"></script>
+		<script src="../lib/vendor/pixastic/pixastic.worker.js"></script>
 		<script src="../lib/vendor/handlebars.runtime-1.0.rc.1.min.js"></script>
 		<script src="../lib/templates.js"></script>
 		<script src="../lib/ComicBook.js"></script>
@@ -50,7 +49,9 @@
 				'goldenboy/goldenboy_23.jpg',
 				'goldenboy/goldenboy_24.jpg',
 				'goldenboy/goldenboy_25.jpg'
-   		]);
+   		], {
+   			libPath: "/reader/lib/"
+   		});
 
 			book.draw();
 
