--- a/examples/dev.html
+++ b/examples/dev.html
@@ -4,7 +4,7 @@
 		<meta charset="utf8">
 		<title>Dev</title>
 
-		<script src="../lib/vendor/jquery-2.0.0.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="../lib/vendor/pixastic/pixastic.js"></script>
 		<script src="../lib/vendor/pixastic/pixastic.effects.js"></script>
 		<script src="../lib/vendor/pixastic/pixastic.worker.js"></script>
@@ -49,9 +49,9 @@
 				'goldenboy/goldenboy_23.jpg',
 				'goldenboy/goldenboy_24.jpg',
 				'goldenboy/goldenboy_25.jpg'
-   		], {
-   			libPath: "/reader/lib/"
-   		});
+			], {
+				libPath: "/reader/examples/comicbook/js/"
+			});
 
 			book.draw();
 
