--- a/lib/tests/index.html
+++ b/lib/tests/index.html
@@ -14,7 +14,7 @@
   <script src="../vendor/pixastic/pixastic.worker.js"></script>
   <script src="../vendor/handlebars.runtime-1.0.rc.1.min.js"></script>
   <script src="../templates.js"></script>
-  <script src="../Comicbook.js"></script>
+  <script src="../ComicBook.js"></script>
 
   <script src="unit/ComicBook.js"></script>
 </head>
