--- a/examples/file.html
+++ b/examples/file.html
@@ -8,6 +8,7 @@
 <html>
 	<head>
 		<meta charset="utf8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<title>App</title>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="bitjs/io.js"></script>
