--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<title>Basic</title>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="comicbook/js/comicbook.min.js"></script>
