iOS webapp enhancements

--- a/examples/file.html
+++ b/examples/file.html
@@ -9,7 +9,11 @@
 	<head>
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
 		<title>App</title>
+
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="bitjs/io.js"></script>
 		<script src="bitjs/archive.js"></script>
