--- a/examples/basic.html
+++ b/examples/basic.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
 		<title>Basic</title>
+
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="comicbook/js/comicbook.min.js"></script>
 		<link rel="stylesheet" href="comicbook/comicbook.css">
