--- a/examples/dev.html
+++ b/examples/dev.html
@@ -13,6 +13,7 @@
 		<script src="../lib/vendor/pixastic/pixastic.effects.js"></script>
 		<script src="../lib/vendor/pixastic/pixastic.worker.js"></script>
 		<script src="../lib/vendor/handlebars.runtime-1.0.rc.1.min.js"></script>
+		<script src="../lib/vendor/quo.js"></script>
 		<script src="../lib/templates.js"></script>
 		<script src="../lib/ComicBook.js"></script>
 		<link rel="stylesheet" href="../css/reset.css">
