add quo to test runner

--- a/lib/tests/index.html
+++ b/lib/tests/index.html
@@ -13,6 +13,7 @@
   <script src="../vendor/pixastic/pixastic.effects.js"></script>
   <script src="../vendor/pixastic/pixastic.worker.js"></script>
   <script src="../vendor/handlebars.runtime-1.0.rc.1.min.js"></script>
+  <script src="../vendor/quo.js"></script>
   <script src="../templates.js"></script>
   <script src="../ComicBook.js"></script>
 
