added separate toolbar button for double page mode

--- a/fonts/icomoon-toolbar/index.html
+++ b/fonts/icomoon-toolbar/index.html
@@ -204,6 +204,10 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xf00d;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xf00d;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe037;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe037;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -325,6 +329,10 @@
 	<span class="box1">
 		<span aria-hidden="true" class="icon-remove"></span>
 		&nbsp;icon-remove
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-copy"></span>
+		&nbsp;icon-copy
 	</span>
 	</section>
 	<footer>
