very basic thumbnail browser.

--- a/examples/dev.html
+++ b/examples/dev.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="../fonts/icomoon-toolbar/style.css">
 		<link rel="stylesheet" href="../css/styles.css">
 		<link rel="stylesheet" href="../css/toolbar.css">
+		<link rel="stylesheet" href="../css/thumbnails.css">
 	</head>
 	<body>
 
