--- a/examples/dev.html
+++ b/examples/dev.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-		<title>Dev</title>
+		<title>Comic Book Reader (Dev)</title>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="../lib/vendor/pixastic/pixastic.js"></script>
@@ -19,6 +20,9 @@
 		<link rel="stylesheet" href="../fonts/icomoon-toolbar/style.css">
 		<link rel="stylesheet" href="../css/styles.css">
 		<link rel="stylesheet" href="../css/toolbar.css">
+		<link rel="shortcut icon" sizes="196x196" href="../icons/1_Desktop_icons/icon_196.png">
+		<link rel="apple-touch-icon" sizes="196x196" href="../icons/1_Desktop_icons/icon_196.png">
+		<link rel="apple-touch-icon-precomposed" sizes="196x196" href="../icons/1_Desktop_icons/icon_196.png">
 	</head>
 	<body>
 
