--- a/examples/basic.html
+++ b/examples/basic.html
@@ -10,8 +10,8 @@
 		<title>Comic Book Reader</title>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="comicbook/js/comicbook.min.js"></script>
-		<link rel="stylesheet" href="comicbook/comicbook.css">
+		<script src="/comicbook/js/comicbook.min.js"></script>
+		<link rel="stylesheet" href="comicbook/comicbook.min.css">
 		<link rel="shortcut icon" sizes="196x196" href="../icons/1_Desktop_icons/icon_196.png">
 		<link rel="apple-touch-icon" sizes="128x128" href="../icons/1_Desktop_icons/con_128.png">
 		<link rel="apple-touch-icon-precomposed" sizes="128x128" href="../icons/1_Desktop_icons/con_128.png">
